# ai-interview-assistant

./: .easignore  .gitignore  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/scripts/: check-rust-toolchain.mjs
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/shared/: ErrorBoundary.tsx  config.ts  errorMessages.ts  http.ts
apps/mobile/: .env.example  .gitignore  app.json  eas.json  package-lock.json  package.json  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/scripts/: run-android.js
apps/mobile/src/: App.tsx
apps/mobile/src/context/: AuthContext.tsx
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/shared/: ErrorBoundary.tsx  config.ts  errorMessages.ts  http.ts  storage.ts  theme.ts  types.ts
apps/web/: README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: axios.ts  config.ts  cookies.ts  (+2 more)
backend/: .env.example  ARCHITECTURE.md  Dockerfile  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/config/: env.js  logger.js
backend/src/db/: mongodb.js  redis.js
backend/src/middleware/: auth.js  errorHandler.js  notFound.js  rateLimit.js  requestContext.js
backend/src/routes/: index.js
backend/src/utils/: AppError.js
(+71 files in other folders)
