[package]
name = "ai_interview_copilot_desktop"
version = "1.0.0"
description = "AI Interview Copilot desktop client"
authors = ["AI Interview Copilot Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
